# ECS_Engine

./: .gitignore  CMakeLists.txt  ECS_Engine.sln  GenerateFiles.bat  LICENSE  README.md  gitignore  imgui.ini
BuildScripts/: editor_script.sh  game_script.sh
ECS_Engine/: CURRENT_DIR  imgui.ini
ECS_Engine/Data/DefaultShaders/: meshShader.frag  meshShader.vert  postProcess.vert
ECS_Engine/Data/EngineShaders/: Particles.cs
ECS_Engine/Data/EngineShaders/Billboard_Unlit_CPU/: Billboard_Unlit.fs  Billboard_Unlit.vs
ECS_Engine/Data/EngineShaders/Billboard_Unlit_GPU/: Billboard_Unlit.vs
ECS_Engine/Data/EngineShaders/Grid_Lit/: Grid_Lit.fs  Grid_Lit.vs
ECS_Engine/Data/EngineShaders/PostProcess/: Post_Process.fs
ECS_Engine/Data/EngineShaders/RenderBuffer/: RenderBuffer.fs  RenderBuffer.vs
ECS_Engine/Data/EngineShaders/Sprite_Unlit/: Sprite_Unlit.fs  Sprite_Unlit.vs
ECS_Engine/Data/EngineShaders/Unlit/: Unlit.fs  Unlit.vs
ECS_Engine/Data/EngineShaders/Voxel_Lit/: Voxel_Lit.fs  Voxel_Lit.vs
ECS_Engine/Data/Metadata/: ComponentsMetadata.txt
ECS_Engine/Editor/EditorUI/: AssetManagerWindow.cpp  AssetManagerWindow.h  AssetViewerWindow.cpp  AssetViewerWindow.h  EditorMainWindow.cpp  EditorMainWindow.h  EmbeddedViewport.cpp  EmbeddedViewport.h  MeshAssetViewer.cpp  MeshAssetViewer.h  ParticleSystemAssetViewer.cpp  ParticleSystemAssetViewer.h  ParticleSystemWindow.cpp  ParticleSystemWindow.h  SpriteWindow.cpp  SpriteWindow.h  TextureAssetViewer.cpp  TextureAssetViewer.h
ECS_Engine/Engine/: Color.cpp  Color.h  Delegate.h  ECS.cpp  Engine.cpp  Engine.h  Entity.h  EntityManager.cpp  EntityManager.h  ResourceManager.cpp  ResourceManager.h  ShaderProgram.cpp  ShaderProgram.h
ECS_Engine/Engine/Experimental/: BuddyAllocator.cpp  BuddyAllocator.h
ECS_Engine/Engine/Math/: Numerals.h  Transforms.h
ECS_Engine/Engine/Python/: create_metadata.py
ECS_Engine/Engine/Systems/: CameraSystem.cpp  CameraSystem.h  ComponentsMetadata.h  DebugSystem.cpp  DebugSystem.h  InputSystem.cpp  InputSystem.h  MeshLoadingSystem.cpp  MeshLoadingSystem.h  OpenGLSystem.cpp  OpenGLSystem.h  Physics2DSystem.cpp  Physics2DSystem.h  ResourceManagerSystem.cpp  ResourceManagerSystem.h  SystemBase.h  SystemManager.cpp  SystemManager.h  TransformSystem.cpp  TransformSystem.h  WorkDispatcherSystem.cpp  WorkDispatcherSystem.h
ECS_Engine/LuaScripts/ParticleShapes/: boxShape.lua  coneShape.lua  sphereShape.lua
ECS_Engine/PythonScripts/: absolute_to_relative_path.py  components_resource_generation.py  generate_filters.py
ECS_Engine/Source/Engine/: BuildMacros.h  Camera.cpp  Camera.h  Color.cpp  Color.h  Delegate.h  ECS.cpp  Engine.cpp  Engine.h  Entity.h  EntityManager.cpp  EntityManager.h  FileHelper.h  GlobalDefinitions.h  GraphicHelpers.cpp  GraphicHelpers.h  MathHelper.h  Object.cpp  Object.h  Random.h  UniqueID.cpp  UniqueID.h
ECS_Engine/Source/Engine/Assets/: Mesh.cpp  Mesh.h  ParticleSystemAsset.cpp  ParticleSystemAsset.h  SpriteAsset.cpp  SpriteAsset.h  Texture.cpp  Texture.h
ECS_Engine/Source/Engine/Components/: ComponentFactory.h  ComponentsResourceFactory.h  GridComponent.cpp  GridComponent.h  RenderComponent.cpp  RenderComponent2D.cpp  RenderComponent2D.h  TransformComponent.cpp
ECS_Engine/Source/Engine/Experimental/: BuddyAllocator.cpp  BuddyAllocator.h
ECS_Engine/Source/Engine/Math/: Numerals.h  Transforms.h
ECS_Engine/Source/Engine/Systems/: CameraSystem.cpp  CameraSystem.h  ComponentFactory.h  ComponentsResourceFactory.h  DebugSystem.cpp  DebugSystem.h  FrustumSystem.cpp  FrustumSystem.h  HelperFunctions2D.h  LuaStateManager.cpp  LuaStateManager.h  MeshLoadingSystem.cpp  MeshLoadingSystem.h  OpenGLSystem.cpp  OpenGLSystem.h  Physics2DSystem.cpp  Physics2DSystem.h  (+20 more)
Editor_Build/: CMakeCache.txt  Makefile  imgui.ini
Editor_Build/Configs/: layout.ini
Editor_Build/Data/EngineShaders/: Particles.cs
Game_Build/: CMakeCache.txt  ECS_Engine  Makefile  imgui.ini
Include/assimp/: revision.h
Linking/linux/: libSDL3.so.0.1.2
(+93 files in other folders)
